--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/dependencies/lucene-analyzers-common-5.0.0.jar"/>
-	<classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/dependencies/lucene-core-5.0.0.jar"/>
-	<classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/dependencies/lucene-queryparser-5.0.0.jar"/>
-    <classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/dependencies/lucene-queries-5.0.0.jar"/>
-    <classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/dependencies/jsoup-1.8.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 8 [1.8.0_25]">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/AwesomeSearchEngine/WebContent/WEB-INF/lib/java-json.jar"/>
+	<classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/AwesomeSearchEngine/WebContent/WEB-INF/lib/jsoup-1.8.1.jar"/>
+	<classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/AwesomeSearchEngine/WebContent/WEB-INF/lib/lucene-analyzers-common-5.0.0.jar"/>
+	<classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/AwesomeSearchEngine/WebContent/WEB-INF/lib/lucene-core-5.0.0.jar"/>
+	<classpathentry kind="lib" path="/Users/mikejuyoon/Code/eclipseprojects/AwesomeSearchEngine/WebContent/WEB-INF/lib/lucene-queryparser-5.0.0.jar"/>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
